<resources>
    <string name="app_name">MPPL JobHeist</string>
    <string name="jobheist">Job Heist</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="bantuan">Bantuan</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="pemberi_kerja">Pemberi Kerja</string>
    <string name="pencari_kerja">Pencari Kerja</string>
    <string name="admin">ADMIN</string>
    <string name="logo">Logo</string>
    <string name="list_daftar">List Daftar</string>
    <string name="lihat_riwayat">Lihat Riwayat</string>
    <string name="verify_akun">Verify Akun</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="alamat">Alamat</string>
    <string name="tutorial">Tutorial</string>
    <string name="welcome">Selamat Datang di Job Heist</string>
    <string name="tatacara_aplikasi"> Tata Cara Penggunaan Aplikasi ini\nSilakan Tekan Tombol DI bawah Ini</string>
    <string name="tidak_ada_koneksi">Tidak Ada Koneksi Internet \nMohon agar Nyalakan \nKoneksi internet anda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
