<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo_login"
                style="@style/ImageView"
                android:layout_width="@dimen/image_logo"
                android:layout_height="@dimen/image_logo"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

            <LinearLayout
                android:id="@+id/line_form_login"
                style="@style/LineContent"
                android:layout_marginTop="@dimen/very_large_margin"
                android:orientation="vertical"
                android:layout_below="@id/iv_logo_login"
                android:background="@drawable/border">

                <EditText
                    android:id="@+id/et_login_email"
                    style="@style/EditTextForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/very_huge_margin"
                    android:background="@drawable/editext_shape"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/et_login_password"
                    style="@style/EditTextForm"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:background="@drawable/editext_shape"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/very_large_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/button_shape"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/login" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/large_marge"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_login_lupapassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:text="@string/lupa_password"
                        android:textColor="@android:color/holo_blue_dark" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/bantuan"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:paddingRight="@dimen/very_large_margin"
                android:paddingLeft="@dimen/very_large_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_below="@id/iv_logo_login"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:background="@drawable/border"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:padding="@dimen/medium_margin"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:text="@string/belum_punya_akun" />

                <TextView
                    android:id="@+id/tv_login_daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/daftar"
                    android:textColor="@android:color/holo_blue_dark"/>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>