<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".daftar.DaftarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_logo_daftar"
                style="@style/ImageView"
                android:layout_width="@dimen/image_logo"
                android:layout_height="@dimen/image_logo"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />

            <LinearLayout
                style="@style/LineContent"
                android:layout_marginTop="@dimen/very_large_margin"
                android:orientation="vertical"
                android:layout_below="@id/iv_logo_daftar"
                android:background="@drawable/border">

                <Button
                    android:id="@+id/btn_daftar_pencarikerja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/very_huge_margin"
                    android:layout_marginRight="@dimen/very_huge_margin"
                    android:layout_marginTop="@dimen/very_huge_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/large_marge"
                    android:paddingBottom="@dimen/large_marge"
                    android:text="@string/pencari_kerja"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/button_shape"/>

                <Button
                    android:id="@+id/btn_daftar_pemberikerja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/very_huge_margin"
                    android:layout_marginRight="@dimen/very_huge_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/very_huge_margin"
                    android:paddingTop="@dimen/large_marge"
                    android:paddingBottom="@dimen/large_marge"
                    android:text="@string/pemberi_kerja"
                    android:textColor="#ffff"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:background="@drawable/button_shape"/>

            </LinearLayout>

            <TextView
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/very_large_margin"
                android:paddingLeft="@dimen/very_large_margin"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_below="@id/iv_logo_daftar"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:text="@string/daftar"
                android:textSize="@dimen/medium_text"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:background="@drawable/border"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>